--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
             </form>
         </div>
     </div>
+
+    Add another file to the folder and commit it.
     <script src="script.js"></script>
     
 </body>
