add one more line

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     </div>
 
     Add another file to the folder and commit it.
+    Add second another file to the folder and commit it.
     <script src="script.js"></script>
     
 </body>
